# opencv-shadow-detection

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ProjectHome.md  Test.sln  ThreadPool.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  frameObject.cpp  frameObject.h  gcptr.cpp  gcptr.h  home.cpp  home.h  initializationParams.h  log.cpp  log.h  log4cxxConfig.xml  main.cpp  main_console.cpp  openCV2_1.sln  openCV2_1.vcxproj  openCV2_1.vcxproj.filters  shadow.cpp  shadow.h
