SET( PROJECT_NAME openCV2_1)

PROJECT( ${PROJECT_NAME} )

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
SET(CMAKE_INSTALL_PREFIX
"$ENV{DESTDIRPREFIX}"
)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

SET(CMAKE_INSTALL_PREFIX "$ENV{DESTDIRPREFIX}")
FIND_PACKAGE( OpenCV REQUIRED )

ADD_EXECUTABLE( ${PROJECT_NAME} main.cpp )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${OpenCV_LIBS} )
